--- a/Codesoft_Task3.ipynb
+++ b/Codesoft_Task3.ipynb
@@ -1682,7 +1682,7 @@
         "\n",
         "Using Logistic regression, accuracy of training and testing data are 0.7945 and 0.8035 respectively.\n",
         "Using Random forest accuracy of training and testing data are 1.0 and 0.8645 respectively.\n",
-        "So, we can see that my model performs well using Random Forest for predict credit card fraud detection."
+        "So, we can see that my model performs well using Random Forest for predict customer churn."
       ],
       "metadata": {
         "id": "vtP4qSYg_f9s"
